--- a/src/components/HeaderBlock/HeaderBlock.module.scss
+++ b/src/components/HeaderBlock/HeaderBlock.module.scss
@@ -16,12 +16,14 @@
     background-image: url(./img/background.jpg);
 
     svg {
-        width: 200px;
+        position: absolute;
+        right: 0;
+        bottom: -20%;
+        z-index: -1;
         
 
         g {
             fill: #EF4746;
-            border: solid 1px white;
         }
     }
 
@@ -38,7 +40,7 @@
 
     .wrap {
         position: relative;
-        z-index: 1;
+        z-index: 5;
     }
 
     .header {
